# minesweeper-slint

./: Cargo.toml  README.md  build.rs
src/: lib.rs
src/controller/: mod.rs
src/mine_sweeper_ui/: main_window.rs  main_window.slint  mod.rs
src/ui/: about_dialog.slint  main.slint  main_window.slint  state_dialog.slint  types.slint
